--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,13 @@
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
+/build/
+/bin/
+.project
+.classpath
+.settings/
+.gradle/
+
 # Package Files #
 *.jar
 *.war
